--- a/To_do_list/views/list.ejs
+++ b/To_do_list/views/list.ejs
@@ -5,11 +5,14 @@
     </div>
     
     <div class="box">
-      <% for( let i=0; i<newItems.length; i++ ) { %>
+      <% for( let i=0; i<newListItems.length; i++ ) { %>
+        <form action="/delete" method="post">
         <div class="item">
-          <input type="checkbox">
-          <p><%= newItems[i] %></p>
+          <input type="checkbox" name="checkbox" onChange="this.form.submit()" value="<%= newListItems[i]._id %>">
+          <p><%= newListItems[i].name %></p>
         </div>
+        <input type="hidden" name="listName" value="<%= listTitle %>"></input>
+      </form>
       <% } %>
  
       <form class="item" action="/" method="post">
